calibre/calibre-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: linuxserver/calibre:latest
          ports:
            - containerPort: 8080   # desktop gui http
            - containerPort: 8081   # web server gui
            - containerPort: 8181   # desktop gui https
          volumeMounts:
            - name: calibre-lib
              mountPath: /config
            - name: calibre-books
              mountPath: /books
      volumes:
        - name: calibre-lib
          persistentVolumeClaim:
            claimName: calibre-pvc
        - name: calibre-books
          persistentVolumeClaim:
            claimName: calibre-books-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
spec:
  selector:
    app: calibre
  ports:
  - port: 8080
    targetPort: 8080
    name: http
